# delta-iris-implementation

./: .gitignore  README.md  compare_throughput.py  debug_actions.py  debug_env.py  main.py  pyproject.toml  test_delta_iris.py
config/: config.yaml
config/model/: continuous.yaml  discrete.yaml
src/: env.py  main.py  test_delta_iris.py  trainer.py  utils.py  wandb_logger.py
src/agent/: __init__.py  action_utils.py  actor_critic.py  buffer.py  config.py  tokenizer.py  world_model.py
src/data/: __init__.py  batch.py  dataset.py  episode.py  episode_count.py  sampler.py  segment.py  utils.py
src/models/: __init__.py  actor_critic.py  convnet.py  kv_caching.py  slicer.py  tokenizer.py  transformer.py  world_model.py
src/tokenizer/: __init__.py  context_tokenizer.py  encoder_decoder.py  quantizer.py  spatial_tokenizer.py  tokenizer.py  utils.py  vector_tokenizer.py
tests/: __init__.py  compare_throughput.py  optimized_throughput.py  test_data_infrastructure.py  test_delta_iris.py  test_enhanced_tokenizer.py
